Overflow/scroll fix. Add Footer.

--- a/templates/assets/fonts/icomoon/style.css
+++ b/templates/assets/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?jkga3h');
-  src:  url('fonts/icomoon.eot?jkga3h#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?jkga3h') format('truetype'),
-    url('fonts/icomoon.woff?jkga3h') format('woff'),
-    url('fonts/icomoon.svg?jkga3h#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?efa8tq');
+  src:  url('fonts/icomoon.eot?efa8tq#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?efa8tq') format('truetype'),
+    url('fonts/icomoon.woff?efa8tq') format('woff'),
+    url('fonts/icomoon.svg?efa8tq#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-github:before {
+  content: "\e913";
+}
+.icon-heart:before {
+  content: "\e914";
+}
 .icon-edit:before {
   content: "\e911";
 }
